Criando o projeto Atividade06

--- a/Atividade06/.gitignore
+++ b/Atividade06/.gitignore
@@ -1,4 +1,4 @@
-node_modulesintentionally untracked files to ignore when using Git
+# Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
 *~
