--- a/Atividade04/package.json
+++ b/Atividade04/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meuapp",
+  "name": "Atividade04",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
