Revert "UPDATE Atividade 16 finalizada"
This reverts commit efa1aca641e08354a022c4249bee88954de4a3eb.

--- a/Atividade16/app/src/main/AndroidManifest.xml
+++ b/Atividade16/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="Atividade16.a17214290014.Atividade16">
+          package="atividade16.a17214290014.atividade16">
 
     <application
             android:allowBackup="true"
@@ -9,7 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".EventActivity">
+        <activity android:name=".ListaRequerimentoActivity">
+
+        </activity>
+        <activity android:name=".NovoRequerimentoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
